--- a/static/index.html
+++ b/static/index.html
@@ -38,11 +38,8 @@ SmartPhone Compatible web template, free WebDesigns for Nokia, Samsung, LG, Sony
     <script src="js/Chart.js"></script>
     <!-- //chart -->
     <!--Calender-->
-    <link rel="stylesheet" href="css/clndr.css" type="text/css"/>
     <script src="js/underscore-min.js" type="text/javascript"></script>
     <script src="js/moment-2.2.1.js" type="text/javascript"></script>
-    <script src="js/clndr.js" type="text/javascript"></script>
-    <script src="js/site.js" type="text/javascript"></script>
     <!--End Calender-->
     <!-- Metis Menu -->
     <script src="js/metisMenu.min.js"></script>
@@ -58,8 +55,8 @@ SmartPhone Compatible web template, free WebDesigns for Nokia, Samsung, LG, Sony
             <nav class="cbp-spmenu cbp-spmenu-vertical cbp-spmenu-left" id="cbp-spmenu-s1">
                 <ul class="nav" id="side-menu">
                     <li class="active">
-                        <a href="#"><i class="fa fa-book "></i>发布内容</a>
-                        <a href="#"><i class="fa fa-book "></i>历史记录</a>
+                        <a href="javascript:void(0)" onclick="loadForm()"><i class="fa fa-book "></i>发布内容</a>
+                        <a href="javascript:void(0)" onclick="loadHistory()"><i class="fa fa-book "></i>历史记录</a>
 
                         <!-- /nav-second-level -->
                     </li>
@@ -111,7 +108,12 @@ SmartPhone Compatible web template, free WebDesigns for Nokia, Samsung, LG, Sony
     <!-- main content start-->
     <div id="page-wrapper">
         <div class="main-page">
-            <h1></h1>
+            <form class="com-mail" id="form" name="form">
+                <input type="text" class="form-control1 control3" placeholder="标题 :">
+                <textarea rows="6" class="form-control1 control2" placeholder="通知内容 :"></textarea>
+
+                <input type="submit" value="发布">
+            </form>
         </div>
     </div>
     <!--footer-->
@@ -121,7 +123,12 @@ SmartPhone Compatible web template, free WebDesigns for Nokia, Samsung, LG, Sony
 <!-- Classie -->
 <script src="js/classie.js"></script>
 <script>
-
+    function loadForm() {
+        alert('postMessage')
+    }
+    function loadHistory() {
+        alert('loadHistory')
+    }
 </script>
 <!--scrolling js-->
 <script src="js/jquery.nicescroll.js"></script>
