--- a/static/login.html
+++ b/static/login.html
@@ -12,11 +12,9 @@
     <link href="css/font-awesome.css" rel="stylesheet">
     <!-- //font-awesome icons -->
     <!-- js-->
-    <script src="js/jquery-1.11.1.min.js"></script>
     <script src="js/modernizr.custom.js"></script>
     <!--webfonts-->
-    <link href='http://fonts.useso.com/css?family=Roboto+Condensed:400,300,300italic,400italic,700,700italic'
-          rel='stylesheet' type='text/css'>
+
     <!--//webfonts-->
     <!--animate-->
     <link href="css/animate.css" rel="stylesheet" type="text/css" media="all">
@@ -49,7 +47,7 @@
                         <div id="selectOrgization">
                             <select name="organization" id="organization" class="form-control1">
                                 <option value="校方">校方</option>
-                                <option value="计算学院/软件学院">计算学院/软件学院</option>
+                                <option value="计算机学院/软件学院">计算机学院/软件学院</option>
                                 <option value="美术学院">美术学院</option>
                                 <option value="文学院">文学院</option>
                             </select>
@@ -90,13 +88,12 @@
     <!--//footer-->
 </div>
 <!-- Classie -->
+<script src="js/jquery-1.11.1.min.js"></script>
+
 <script src="js/classie.js"></script>
 
 <!--scrolling js-->
-<script src="js/jquery.nicescroll.js"></script>
 <script src="js/scripts.js"></script>
-<!--//scrolling js-->
-<!-- Bootstrap Core JavaScript -->
 <script src="js/bootstrap.js"></script>
 </body>
 </html>
