--- a/static/index.html
+++ b/static/index.html
@@ -23,11 +23,7 @@ SmartPhone Compatible web template, free WebDesigns for Nokia, Samsung, LG, Sony
     <!-- js-->
     <script src="js/jquery-1.11.1.min.js"></script>
     <script src="js/modernizr.custom.js"></script>
-    <!--webfonts-->
-    <link href='http://fonts.useso.com/css?family=Roboto+Condensed:400,300,300italic,400italic,700,700italic'
-          rel='stylesheet' type='text/css'>
-    <!--//webfonts-->
-    <!--animate-->
+
     <link href="css/animate.css" rel="stylesheet" type="text/css" media="all">
     <script src="js/wow.min.js"></script>
     <script>
@@ -84,15 +80,12 @@ SmartPhone Compatible web template, free WebDesigns for Nokia, Samsung, LG, Sony
             <!--//logo-->
             <!--search-box-->
             <div class="search-box">
-                <form class="input">
-                    <input class="sb-search-input input__field--madoka" placeholder="Search..." type="search"
-                           id="input-31"/>
-                    <label class="input__label" for="input-31">
-                        <svg class="graphic" width="100%" height="100%" viewBox="0 0 404 77" preserveAspectRatio="none">
-                            <path d="m0,0l404,0l0,77l-404,0l0,-77z"/>
-                        </svg>
-                    </label>
-                </form>
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                <div id="organizaiton">
+
+                </div>
+
             </div><!--//end-search-box-->
         </div>
         <div class="header-right">
@@ -138,8 +131,16 @@ SmartPhone Compatible web template, free WebDesigns for Nokia, Samsung, LG, Sony
 <script src="js/bootstrap.js"></script>
 <script type="text/javascript">
     $(document).ready(function () {
-        $.post('/api/0.01/admin/check', {type:'login'}, function (data) {
-            alert(data);
+        $.post('/api/0.01/admin/check', {type: 'login'}, function (data) {
+            if (data == '0') {
+                // response 0 mean had not login
+                window.location.href = '/static/login.html';
+            }
+            else {
+                $.get('/api/0.01/admin/organization', function (data) {
+                    $('#organizaiton').html(data)
+                })
+            }
         })
     })
 </script>
